objects/SDO_Experience_ContentArticle__c.object
<CustomObject>
    <description>Used in custom LWC to show content articles as part of collections</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used in LWC Experience component for displaying specific articles (single component reference only)</description>
        <externalId>true</externalId>
        <label>Article External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SDO_ArticleContent__c</fullName>
        <description>Used in experience LWC to surface content specific to the article requested</description>
        <inlineHelpText>Full copy of the content displayed in SDO CMS component</inlineHelpText>
        <label>Article Content</label>
        <length>15000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SDO_CMS_ContentCollection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in LWC to connect articles to collections - not an MD or required as articles need the ability to stand alone</description>
        <label>Content Collection</label>
        <referenceTo>SDO_Experience_ContentCollection__c</referenceTo>
        <relationshipLabel>Content Article</relationshipLabel>
        <relationshipName>Content_Article</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_CMS_PreviewContent__c</fullName>
        <description>Text area leveraged in the SDO CMS component to provide a preview of content</description>
        <inlineHelpText>Preview of the content displayed in SDO CMS component</inlineHelpText>
        <label>Preview Content</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDO_ImageURL__c</fullName>
        <description>Used in the custom experience component for image references</description>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <label>Content Article</label>
    <nameField>
        <label>Content Article Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Article</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>